# gx

./: .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/specs/: 2026-03-21-output-redesign-design.md  2026-03-22-info-command-design.md  2026-03-22-info-command-plan.md  2026-03-22-output-redesign-plan.md
src/gx/: __init__.py  cli.py  constants.py
src/gx/commands/: __init__.py  clean.py  done.py  feat.py  info.py  log.py  pull.py  push.py  status.py
src/gx/lib/: __init__.py  branch.py  config.py  console.py  display.py  git.py  github.py  info_panels.py  log_panel.py  options.py  stale_analyzer.py  status_panel.py  worktree.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_clean.py  test_cli.py  test_done.py  test_feat.py  test_info.py  test_log.py  test_pull.py  test_push.py
tests/unit/: __init__.py  conftest.py  test_branch.py  test_clean.py  test_config.py  test_console.py  test_constants.py  test_display.py  test_done.py  test_feat.py  test_git.py  test_github.py  test_info.py  test_info_panels.py  test_log.py  test_log_panel.py  test_pull.py  test_push.py  test_stale_analyzer.py  test_status.py  test_status_panel.py  test_worktree.py
