[project]
    authors = [{ name = "Nate Landau", email = "github@natenate.org" }]
    classifiers = [
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
    ]
    dependencies = ["rich>=14.3.3", "typer>=0.24.1"]
    description = "A CLI that wraps common git commands with sensible defaults, safety guards, and helpful summaries."
    license = { file = "LICENSE" }
    name = "git-gx"
    readme = "README.md"
    requires-python = ">=3.13,<3.15"
    version = "0.5.0"

    [project.scripts]
        gx = "gx.cli:main"

[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.10.12,<0.11.0"]

[tool.uv.build-backend]
    module-name = "gx"

[dependency-groups]
    dev = [
        "commitizen>=4.13.9",
        "coverage>=7.13.5",
        "duty>=1.9.0",
        "prek>=0.3.6",
        "pytest-clarity>=1.0.1",
        "pytest-cov>=7.1.0",
        "pytest-devtools>=1.0.0",
        "pytest-mock>=3.15.1",
        "pytest-repeat>=0.9.4",
        "pytest-sugar>=1.1.1",
        "pytest-xdist>=3.8.0",
        "pytest>=9.0.2",
        "ruff>=0.15.7",
        "shellcheck-py>=0.11.0.1",
        "ty>=0.0.24",
        "typos>=1.44.0",
        "yamllint>=1.38.0",
    ]

[tool.commitizen]
    bump_message               = "bump(release): v$current_version → v$new_version"
    changelog_merge_prerelease = true
    tag_format                 = "v$version"
    update_changelog_on_bump   = true
    version_files              = ["src/gx/__init__.py:__version__"]
    version_provider           = "uv"

[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
    exclude_lines = [
        'def __repr__',
        'except [\w\s\._]+ as .*:',
        'if TYPE_CHECKING',
        'pragma: no cover',
    ]
    fail_under = 10
    show_missing = true
    skip_covered = true
    skip_empty = true

[tool.coverage.run]
    branch       = true
    command_line = "--module pytest"
    data_file    = ".cache/coverage"
    omit         = ["tests/*"]
    source       = ["src"]

[tool.coverage.xml]
    output = ".cache/coverage.xml"

[tool.pytest.ini_options]

    addopts        = "--color=yes --doctest-modules --strict-config --strict-markers -n auto --dist loadfile"
    cache_dir      = ".cache/pytest"
    columns        = 120
    filterwarnings = ['error', 'ignore:.*Pydantic.*:UserWarning', 'ignore::DeprecationWarning:']
    markers        = ["serial"]
    set_columns    = true
    testpaths      = ["tests"]
    xfail_strict   = true

[tool.ruff] # https://github.com/charliermarsh/ruff

    exclude        = [".cache", ".git", ".venv", "build", "dist", "reference"]
    fix            = true
    line-length    = 100
    output-format  = "grouped"
    src            = ["src", "tests"]
    target-version = "py313"
    [tool.ruff.lint]
        ignore = [
            "ANN002", # Missing type annotation for `*args`
            "ANN003", # Missing type annotation for `**kwargs`
            "ANN204", # missing return type annotation for special method `__init__`
            # "B006",    # mutable-argument-default
            # "B008",    # function-call-in-default-argument
            "COM812",  # Trailing comma missing"
            "CPY001",  # Missing copyright notice at top of file
            "D107",    # undocumented-public-init
            "E501",    # line-too-long
            "PLC0415", # Imports should be at top of file
            # "FBT001", # Boolean-typed positional argument in function definition
            # "FBT002", # Boolean-typed positional argument in function definition
            "FIX002", # Line contains TODO, consider resolving the issue
            "S311",   # suspicious-non-cryptographic-random-usage
            "TD001",  # invalid-todo-tag
            "TD002",  # Missing author in TODO
            "TD003",  # Missing issue link on the line following this TODO
        ]
        per-file-ignores = { "tests/**/*.py" = [
            "A002",
            "A003",
            "ANN001",  # Missing type annotation for function argument `cls`
            "ANN002",  # Missing type annotation for `*args`
            "ANN003",  # Missing type annotation for `**kwargs`
            "ANN201",  # Missing return type annotation
            "ARG001",  # Unused function argument
            "ARG002",  # Unused method argument
            "ARG005",  # Unused lambda argument
            "D102",
            "ERA001",  # Commented out code
            "F403",
            "F405",    # May be undefined from type imports
            "FBT001",  # Boolean-typed positional argument in function definition
            "PGH003",  # Use specific rule codes when ignoring type issues
            "PLC0415", # Imports should be at top of file
            "PLR0913",
            "PLR2004",
            "PLW0108", # Lambda may be unnecessary; consider inlining inner function
            "S101",
            "SLF001",  # Calling private method
            "W292",    # No blank line at end of file - included b/c cursor struggles to add a trailing newline and burns through requests trying to fix this linting error.
        ] }
        select = ["ALL"]
        unfixable = [
            "ERA001", # Commented out code
            "F401",   # unused-import
            "F841",   # unused-variable
        ]

        [tool.ruff.lint.mccabe]
            # Unlike Flake8, default to a complexity level of 10.
            max-complexity = 10

        [tool.ruff.lint.pydocstyle]
            convention = "google"

        [tool.ruff.lint.pylint]
            max-args = 7

        [tool.ruff.lint.flake8-annotations]
            allow-star-arg-any = true

    [tool.ruff.format]
        indent-style              = "space"
        line-ending               = "auto"
        quote-style               = "double"
        skip-magic-trailing-comma = false
